@@ -1,4 +1,5 @@
 Version next
+* Fix toolbar pop-up menu bugs by removing legacy Australis compatibility code that is no longer needed.
 
 Version 2015.01.31.02b
 * Drop support for Firefox 30.0 and older. Unify Australis integration.
